[tool.poetry]
name = "ArgCache"
version = "0.2.0"
description = "Caching the results of a function call given the same arguments"
authors = ["Johan Philis <johan.e.philis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
